<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">MHE</string>
    <string name="name">MHE</string>
    <string name="thingy_52">MHE</string>
    <string name="action_about_thingy"><a href="http://www.mandohella.com">About MHE</a></string>
    <string name="action_about">About</string>
    <string name="action_dfu">DFU</string>
    <string name="environment_current_conditions_title">Current Conditions</string>
    <string name="environment_service_title">Environment</string>
    <string name="configuration">Configuration</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="no_ble">Device doesn\'t support BLE!</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="not_available">n/a</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>
    <string name="dev_name_info">MHE name</string>
    <string name="dev_name_info_summary">Give a name to your MHE (optional)</string>
    <string name="user_info">User information</string>
    <string name="connect_thingy_summary">Click to scan or touch MHE with the back of your smart phone to connect via NFC</string>
    <string name="user_info_hint">Name</string>
    <string name="email_info">Email information</string>
    <string name="email">Email</string>
    <string name="device_name_hint">10 byte name</string>
    <string name="initial_configuration">Initial Configuration</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="error_username">Name cannot be empty</string>
    <string name="error_email">User email cannot be empty</string>
    <string name="get_started">GET STARTED</string>
    <string name="initial_setup_complete">Initial setup complete!</string>
    <string name="action_add">Add MHE</string>
    <string name="no_thingy_connected_configuration">Please reconnect to %s to view the configuration</string>
    <string name="thingy_already_connected">Already connected to %s</string>
    <string name="no_thingy_connected">Not connected to a MHE</string>
    <string name="no_thingy_configured">No MHE configured</string>
    <string name="no_thingy_connected_step_one">Please follow step 1 to proceed</string>
    <string name="connect_to_thingy">Connect to a MHE</string>
    <string name="location_info">Location</string>
    <string name="location_summary">Share your location (optional)</string>
    <string name="location_summary_details">By sharing your location other users may be able to see your MHE device on a map with a location marker.</string>
    <string name="share_location">Share MHE location</string>
    <string name="scan_thingy">Scan</string>
    <string name="disconnect_connect">Disconnect and scan</string>
    <string name="skip">Skip</string>
    <string name="environment_settings">Environment settings</string>
    <string name="environment_settings_cardview">ENVIRONMENT SETTINGS</string>
    <string name="connectivity_state">State</string>
    <string name="having_troubles">Having troubles?</string>
    <string name="thing_url"><a href="https://www.nordicsemi.com/thingy">"https://www.nordicsemi.com/thingy"</a></string>
    <string name="privacy_policy_url"><a href="https://www.nordicsemi.com/eng/About-us/Privacy-Policy">"https://www.nordicsemi.com/eng/About-us/Privacy-Policy"</a></string>
    <string name="github_thingy_app_url"><a href="https://www.nordicsemi.com/eng/About-us/Privacy-Policy">"https://github.com/NordicSemiconductor/Android-Nordic-Thingy"</a></string>
    <string name="github_thingy_fw_url"><a href="https://github.com/NordicSemiconductor/Nordic-Thingy52-FW">"https://github.com/NordicSemiconductor/Nordic-Thingy52-FW"</a></string>
    <string name="environment_settings_title">Environment Settings</string>
    <string name="thingy_location_marker_title">Marker Settings</string>
    <string name="interval_temperature">Temperature interval</string>
    <string name="interval_pressure">Pressure interval</string>
    <string name="interval_humidity">Humidity interval</string>
    <string name="interval_color_intensity">Color intensity interval</string>
    <string name="air_quality_interval">Air quality interval</string>
    <string name="time">Time</string>
    <string name="frequency">Frequency</string>
    <string name="interval_pedometer">Pedometer interval</string>
    <string name="interval_temperature_compensation">Temp. compensation interval</string>
    <string name="interval_compass">Compass interval</string>
    <string name="interval_compass_compensation">Compass compensation interval</string>
    <string name="interval_motion">Motion interval</string>
    <string name="interval_wake_on_motion">Wake on motion</string>
    <string name="motion_freq_hz">hz</string>
    <string name="time_unit_ms">ms</string>
    <string name="time_unit_s">s</string>
    <string name="interval_ms">%d ms</string>
    <string name="interval_s">%d s</string>
    <string name="interval_hz">%d hz</string>
    <string name="adv_interval_formula">x 0.625 ms =</string>
    <string name="decimal_format_ms"> %.2f ms</string>
    <string name="conn_interval_formula">x 1.25 ms = </string>
    <string name="supervision_timeout_formula">x 10 ms = </string>
    <string name="led_percentage">%d %%</string>
    <string name="error_temp_interval">Interval must be between 100-60000 milliseconds!</string>
    <string name="error_pressure_interval">Interval cannot be less than 50-60000 milliseconds!</string>
    <string name="error_humidity_interval">Interval cannot be less than 100-60000 milliseconds!</string>
    <string name="error_color_intensity_interval">Interval cannot be less than 200-60000 milliseconds!</string>
    <string name="error_color_interval">Color interval cannot be less than %d seconds!</string>
    <string name="error_temp_interval_empty">Temperature interval cannot be empty!</string>
    <string name="error_pressure_interval_empty">Pressure interval cannot be empty!</string>
    <string name="error_color_intensity_interval_empty">Color intensity interval cannot be empty!</string>
    <string name="error_humidity_interval_empty">Humidity interval cannot be empty!</string>
    <string name="error_pedometer_interval_empty">Pedomter interval cannot be empty!</string>
    <string name="error_compass_interval_empty">Compass interval cannot be empty!</string>
    <string name="error_motion_interval_empty">Motion frequency cannot be empty!</string>
    <string name="settings_basic_thingy">MHE Settings</string>
    <string name="settings_thingy_name">MHE name</string>
    <string name="settings_adv_param_char">Advertising parameters</string>
    <string name="settings_appearance_char">Appearance</string>
    <string name="settings_connection_param_char">Connection parameters</string>
    <string name="settings_eddystone_url">Eddystone URL</string>
    <string name="settings_cloud_token">Cloud token</string>
    <string name="settings_fw_version">Firmware version</string>
    <string name="settings_fw_version_title">Firmware Version</string>
    <string name="settings_thingy_cloud">Cloud Settings</string>
    <string name="settings_location">Location Settings</string>
    <string name="settings_share_location">Share location</string>
    <string name="settings_environment">Environment Settings</string>
    <string name="settings_motion">Motion Settings</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="gas_mode_one">1s</string>
    <string name="gas_mode_two">10s</string>
    <string name="gas_mode_three">60s</string>
    <string name="barometer_mode">Barometer</string>
    <string name="altimeter_mode">Altimeter</string>
    <string name="appearance_hint">Appearance</string>
    <string name="min_connection_params_hint">Min. connection interval</string>
    <string name="max_connection_params_hint">Max. connection interval</string>
    <string name="slave_latency_hint">Slave latency</string>
    <string name="conn_sup_timeout_hint">Supervision timeout</string>
    <string name="url_hint">URL</string>
    <string name="ifttt_token_hint">100 Byte token</string>
    <string name="error_ifttt_token_too_long">Cloud token must be between 1 - 100 bytes</string>
    <string name="url_data_text">Url text</string>
    <string name="error_empty_device_name">MHE name cannot be empty!</string>
    <string name="error_long_device_name">MHE name cannot exceed more than 10 bytes!</string>
    <string name="error_empty_min_conn_interval">Min. connection interval cannot be empty</string>
    <string name="error_empty_max_conn_interval">Max. connection interval cannot be empty</string>
    <string name="error_empty_slave_latency">Slave latency cannot be empty</string>
    <string name="error_empty_supervision_timeout">Supervision timeout cannot be empty</string>
    <string name="error_uint16">Value does not match UINT16</string>
    <string name="error_uint8">Value does not match UINT8</string>
    <string name="error_configuring_char">Unable to configure characteristic!</string>
    <string name="error_invalid_conn_interval">Value must be within 7.5ms and 4000ms</string>
    <string name="error_invalid_slave_latency">Value must be within 0 and 500</string>
    <string name="error_invalid_supervision_timeout">Value must be within 100ms and 32000ms</string>
    <string name="error_empty_cloud_token">Cloud token cannot be empty!</string>
    <string name="error_cloud_token_too_long">Cloud token cannot be longer than 250 bytes</string>
    <string name="error_cloud_token_length">Cloud token must between 1-250 bytes</string>
    <string name="error_cloud_token">Error, unable to write to cloud token characteristic</string>
    <string name="cloud_token_settings">Cloud Token</string>
    <string name="adv_interval">Advertisment interval</string>
    <string name="adv_time_out">Advertisement timeout</string>
    <string name="error_empty_adv_interval">Error, value cannot be empty</string>
    <string name="error_adv_interval">Must be between 20ms and 10.24s</string>
    <string name="error_empty_adv_timeout">Error, avalue cannot be empty</string>
    <string name="error_adv_timeout">Value must be between 0s and 180 seconds</string>
    <string name="adv_param_title">Advertising Interval Parameters</string>
    <string name="thingy_name_title">MHE Name</string>
    <string name="title_gravity_vector2">Gyro</string>
    <string name="appearance_title">Appearance</string>
    <string name="connection_parameters_title">Connection Parameters</string>
    <string name="physcial_web_url_title">Eddystone Web URL</string>
    <string name="temperature_interval_title">Temperature Interval</string>
    <string name="action_save">Save</string>
    <string name="temperature_compensation_interval_title">Temp. Compensation Interval</string>
    <string name="pressure_interval_title">Pressure Interval</string>
    <string name="humidity_interval_title">Humidity Interval</string>
    <string name="color_intensity_interval_title">Color Intensity Interval</string>
    <string name="gas_mode_title">Air quality Interval</string>
    <string name="pressure_mode_title">Pressure Mode</string>
    <string name="shortened_url">Shortened URL</string>
    <string name="shorten_url">Shorten URL</string>
    <string name="result_title">PME result</string>
    <string name="detect_history">History</string>
    <string name="title_orientation">Orientation</string>
    <string name="title_tap">Tap sensor</string>
    <string name="title_pedometer">Step counter</string>
    <string name="title_heading">Heading</string>
    <string name="featurevector_title">FeatureVector</string>
    <string name="resultvector_title">ResultVector</string>
</resources>