<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/pme_history_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/pme_history_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:background="@android:color/white"
                        app:popupTheme="@style/ActionBarPopupThemeOverlay"
                        app:titleMarginStart="@dimen/card_view_toolbar_title_margin"
                        app:titleTextAppearance="@style/Cardview.TitleText">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:layout_weight="1"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="@string/detect_history" />

                        </LinearLayout>
                    </android.support.v7.widget.Toolbar>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"></LinearLayout>

                    <ListView
                        android:id="@+id/history_list"
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:fillViewport="true">

                    </ListView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/pme_detect_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:id="@+id/pme_detect_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/pme_detect_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:background="@android:color/white"
                        app:popupTheme="@style/ActionBarPopupThemeOverlay"
                        app:titleMarginStart="@dimen/card_view_toolbar_title_margin"
                        app:titleTextAppearance="@style/Cardview.TitleText">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:layout_weight="1"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="@string/result_title" />

                            <ImageButton
                                android:id="@+id/imageButton"
                                android:layout_width="3dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="downloadBT_clicked"
                                card_view:srcCompat="@android:drawable/arrow_down_float" />

                            <Switch
                                android:id="@+id/switch_detect"
                                android:layout_width="65dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="8dp"

                                />
                        </LinearLayout>
                    </android.support.v7.widget.Toolbar>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"></LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/result_img"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/white" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="bottom">

                            <TextView
                                android:id="@+id/detect_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/white"
                                android:fontFamily="sans-serif-condensed"
                                android:textSize="30sp" />

                        </LinearLayout>


                    </LinearLayout>

                    <!--android:elipsize="marquee"-->
                    <!--android:focusable="true"-->
                    <!--android:marqueeRepeatLimit="1"-->
                    <!--android:singleLine="true"-->

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/pme_featurevector_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/pme_featurevector_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:background="@android:color/white"
                        app:popupTheme="@style/ActionBarPopupThemeOverlay"
                        app:titleTextAppearance="@style/Cardview.TitleText">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:layout_weight="1"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="@string/featurevector_title" />

                        </LinearLayout>
                    </android.support.v7.widget.Toolbar>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"></LinearLayout>

                    <ListView
                        android:id="@+id/featurevector_list"
                        android:layout_width="match_parent"
                        android:layout_height="145dp"
                        android:fillViewport="true">

                    </ListView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/pme_resultvector_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/pme_resultvector_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:background="@android:color/white"
                        app:popupTheme="@style/ActionBarPopupThemeOverlay"
                        app:titleTextAppearance="@style/Cardview.TitleText">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:layout_weight="1"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="@string/resultvector_title" />

                        </LinearLayout>
                    </android.support.v7.widget.Toolbar>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"></LinearLayout>

                    <ListView
                        android:id="@+id/resultvector_list"
                        android:layout_width="match_parent"
                        android:layout_height="145dp"
                        android:fillViewport="true">

                    </ListView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</ScrollView>